--- a/tuumes/phase2/src/main/resources/static/account/events/my_events.html
+++ b/tuumes/phase2/src/main/resources/static/account/events/my_events.html
@@ -57,17 +57,26 @@
 
 <script>
     function getEvents() {
-        $.postJSON("/events/view", {
+        $.getJSON("/events", {
             userId: USER_ID,
         }, function(result) {
+            console.log(result);
             let to_print = ``;
             result.data.forEach(event => {
                 let print_speakers = ``;
-                event.speakers.forEach(speaker => {
+                let print_delete = ``;
+                event.speakerData.forEach(speaker => {
                     print_speakers = `
-                        <a class="mt-2 mb-2" href="#">Contact: ${speaker.name}</a>
+                        <a class="mt-2 mb-2" href="../messages/send_message.html#${speaker.email}">Contact: ${speaker.name}</a>
                     `;
                 });
+                if (USER_TYPE == userType.ORGANIZER) {
+                    print_delete = `
+                    <a class="btn btn-danger" id="register" href="../organizer/modify_event.html#${event.id}">
+                        <i class="fa fa-calendar-minus fa-lg mr-2"></i> Delete
+                    </a>`;
+                }
+                let userCount = event.userIds.length;
                 to_print += `
                 <div class="container white text-center mt-4 pt-4">
                     <h3>${event.name}</h3>
@@ -77,17 +86,21 @@
                         moment(event.endTime).format('MMMM Do YYYY, h:mm:ss a') + `
                     </p>
                     <p class="mt-2 mb-2">Location: ${event.roomName}</p>
-                    <p class="mt-2 mb-2">Capacity: ${event.userCount}/${event.userLimit}</p>
-                    ${print_contacts}
+                    <p class="mt-2 mb-2">Capacity: ${userCount}/${event.userLimit}</p>
+                    ${print_speakers}
                     <br>
-                    <button class="btn btn-secondary" id="unregister" type="button" onclick="unregisterEvent(${event.id});">
+                    <button class="btn btn-secondary" id="unregister" type="button" onclick="unregisterEvent("${event.id}");">
                         <i class="fa fa-calendar-minus fa-lg mr-2"></i> Unregister
                     </button>
+                    ${print_delete}
                     <br><br>
                 </div>
                 `;
             });
+            
             $("#events").html(to_print);
+            if (result.data.length == 0)
+                toastr.error("You are in no events!");
         });
     }
 
