--- a/tuumes/phase2/src/main/resources/static/account/organizer/create_event.html
+++ b/tuumes/phase2/src/main/resources/static/account/organizer/create_event.html
@@ -48,33 +48,30 @@
         <form class="container needs-validation" id="create_event_form">
             <div class="form-group">
                 <input autocomplete="off" autofocus class="form-control" name="name" placeholder="Event Name" required
-                       type="text">
+                       type="text" id="name">
             </div>
 
             <div class="form-group">
                 <textarea autocomplete="off" class="form-control" name="description" placeholder="Event Description"
-                          required
+                          required id="description"
                           rows="6"></textarea>
             </div>
 
             <div class="form-group">
                 <p>Start Time: </p>
                 <input autocomplete="off" class="form-control" name="startTime" placeholder="Start Time" required
-                       type="datetime-local">
+                       type="datetime-local" id="startTime">
             </div>
 
             <div class="form-group">
                 <p>End Time: </p>
                 <input autocomplete="off" class="form-control" name="endTime" placeholder="End Time" required
-                       type="datetime-local">
+                       type="datetime-local" id="endTime">
             </div>
 
             <div class="form-group">
-                <select class="browser-default custom-select" name="room" required>
-                    <option disabled selected>Room</option>
-                    <option value="1">Room Name One</option>
-                    <option value="2">Room Name Two</option>
-                    <option value="3">Room Name Three</option>
+                <select class="browser-default custom-select" name="roomId" id="roomId" required>
+                    <option disabled selected> ... </option>
                 </select>
             </div>
 
@@ -86,8 +83,8 @@
             </div>
 
             <div class="custom-control custom-checkbox">
-                <input class="custom-control-input" id="isVip" type="checkbox">
-                <label class="custom-control-label" for="isVip">VIPs Only?</label>
+                <input class="custom-control-input" type="checkbox" id="isVipOnlyEvent">
+                <label class="custom-control-label" for="isVipOnlyEvent">VIPs Only?</label>
             </div>
 
             <br>
@@ -106,4 +103,58 @@
 <script src="https://cdn.mkn.cx/MDB/js/mdb.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="../../assets/js/global.js"></script>
 <script type="text/javascript" src="../../assets/js/account.js"></script>
+
+<script>
+    function getRooms() {
+        $.getJSON("/rooms/view", { }, function(result) {
+            console.log(result);
+            let to_print = `<option disabled selected>Room</option>`;
+            result.data.forEach(room => {
+                to_print += `
+                <option value="${room.id}">${room.name} (Capacity: ${room.capacity})</option>`;
+            });
+            $("#roomId").html(to_print);
+        });
+    }
+
+    $("#create_event_form").submit(function(e) {
+        if (!validate(this))
+            return false;
+
+        e.preventDefault();
+
+        let data = {};
+        $(":input", this).each(function(i, e) {
+            if (e.type !== "submit")
+                data[e.name] = e.value;
+        });
+
+        data['startTime'] = Math.floor($("#startTime").prop("valueAsNumber") / 1000);
+        data['endTime'] = Math.floor($("#endTime").prop("valueAsNumber") / 1000);
+        data['isVipOnlyEvent'] = $("#isVipOnlyEvent").prop("checked");
+        data['capacity'] = parseInt(data['capacity']);
+
+        console.log(data);
+
+        $.postJSON("/events", data, function(result) {
+            console.log(result);
+
+            if (result.valid) {
+                toastr.success("The event has been created.");
+            } else {
+                switch (result.message) {
+                    
+                    default:
+                        toastr.error("Unexpected error: " + result.message);
+                        break;
+                }
+            }
+        });
+
+        return false;
+    });
+
+    getRooms();
+</script>
+
 </html>
