--- a/tuumes/phase2/src/main/resources/static/account/contacts/view_contacts.html
+++ b/tuumes/phase2/src/main/resources/static/account/contacts/view_contacts.html
@@ -62,7 +62,7 @@
 
         <div class="form-group">
             <label for="newContactEmail">Add Contact:</label>
-            <input autocomplete="on" class="form-control z-depth-1" id="newContactEmail" name="newContactEmail" placeholder="User Email" type="text">
+            <input autocomplete="on" class="form-control z-depth-1" id="newContactEmail" name="newContactEmail" placeholder="User Email" type="email">
         </div>
         <button class="btn btn-default btn-sm" onclick="addContact();"><i class="fa fa-user-check fa-lg"></i> Add</button>
 
