--- a/tuumes/phase2/src/main/resources/static/account/organizer/view_events.html
+++ b/tuumes/phase2/src/main/resources/static/account/organizer/view_events.html
@@ -58,7 +58,7 @@
 
 <script>
     function getEvents() {
-        $.getJSON("/events/available", {
+        $.getJSON("/events", {
             userId: USER_ID,
         }, function(result) {
             console.log(result);
@@ -71,12 +71,6 @@
                         <a class="mt-2 mb-2" href="../messages/send_message.html#${speaker.email}">Contact: ${speaker.name}</a>
                     `;
                 });
-                if (USER_TYPE == userType.ORGANIZER) {
-                    print_delete = `
-                    <a class="btn btn-default" id="register" href="../organizer/modify_event.html#${event.id}">
-                        <i class="fas fa-edit"></i> Modify
-                    </a>`;
-                }
                 let userCount = event.userIds.length;
                 to_print += `
                 <div class="container white text-center mt-4 pt-4">
@@ -90,29 +84,15 @@
                     <p class="mt-2 mb-2">Capacity: ${userCount}/${event.userLimit}</p>
                     ${print_speakers}
                     <br>
-                    <button class="btn btn-secondary" id="register" type="button" onclick="registerEvent('${event.id}');">
-                        <i class="fa fa-calendar-plus fa-lg mr-2"></i> Register
-                    </button>
-                    ${print_delete}
+                    <a class="btn btn-default" id="register" href="../organizer/modify_event.html#${event.id}">
+                        <i class="fas fa-edit"></i> Modify
+                    </a>
                     <br><br>
                 </div>
                 `;
             });
             $("#events").html(to_print);
         });
-    }
-
-    function registerEvent(eventId) {
-        $.postJSON("/events/register", {
-            userId: USER_ID,
-            eventId: eventId
-        }, function(result) {
-            console.log(result);
-            getEvents();
-            toastr.success("You've registered to this event.");
-        });
-
-        return false;
     }
 
     getEvents();
