--- a/tuumes/phase2/src/main/resources/static/account/organizer/menu.html
+++ b/tuumes/phase2/src/main/resources/static/account/organizer/menu.html
@@ -55,6 +55,16 @@
             </div>
             <div class="col-2">
                 <div class="card">
+                    <a href="view_events.html">
+                        <div class="card-content text-center">
+                            <h1 class="bigicon"><i class="fas fa-calendar"></i></h1>
+                            <h4 class="mb-3">All Events</h4>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="card">
                     <a href="create_account.html">
                         <div class="card-content text-center">
                             <h1 class="bigicon"><i class="fas fa-user"></i></h1>
