--- a/tuumes/phase2/src/main/resources/static/account/organizer/create_event.html
+++ b/tuumes/phase2/src/main/resources/static/account/organizer/create_event.html
@@ -142,6 +142,11 @@
         data['speakerLimit'] = parseInt(data['speakerLimit']);
         data['userLimit'] = parseInt(data['userLimit']);
 
+        if (data['startTime'] >= data['endTime']) {
+            toastr.error("Bad time input, try something else.");
+            return false;
+        }
+
         console.log(data);
 
         $.postJSON("/events", data, function(result) {
