--- a/tuumes/phase2/src/main/resources/static/account/speaker/view_speaking_events.html
+++ b/tuumes/phase2/src/main/resources/static/account/speaker/view_speaking_events.html
@@ -51,18 +51,29 @@
 <div class="container-fluid mt-5">
     <div class="container white text-center pt-4">
         <h3 class="pb-2">Events you are scheduled to speak at: </h3>
-
         <div class="white z-depth-1 px-3 pt-3 pb-0 event-list">
             <ul class="list-unstyled" id="events">
                 <li class="p-2">
                     <div class="form-check">
                         <input class="form-check-input" id="event1" type="checkbox">
                         <label class="form-check-label" for="event1">
-                            <strong>Event Name</strong>
-                            <a class="text-muted">Location: 3/5 &nbsp;<i class="fa fa-user-friends fa-lg"></i> |</a>
-                            <a class="text-muted">StartTime - EndTime</a>
+                            <strong> ... </strong>
+                            <a class="text-muted">... &nbsp;<i class="fa fa-user-friends fa-lg"></i> |</a>
+                            <a class="text-muted">...</a>
                             <br>
-                            <a class="text-muted">Description</a>
+                            <a class="text-muted">...</a>
+                        </label>
+                    </div>
+                </li>
+                <li class="p-2">
+                    <div class="form-check">
+                        <input class="form-check-input" id="event2" type="checkbox">
+                        <label class="form-check-label" for="event2">
+                            <strong> ... </strong>
+                            <a class="text-muted">... &nbsp;<i class="fa fa-user-friends fa-lg"></i> |</a>
+                            <a class="text-muted">...</a>
+                            <br>
+                            <a class="text-muted">...</a>
                         </label>
                     </div>
                 </li>
