--- a/tuumes/phase2/src/main/resources/static/account/events/schedule.html
+++ b/tuumes/phase2/src/main/resources/static/account/events/schedule.html
@@ -21,7 +21,6 @@
         <table class="table" id="eventSchedule">
             <thead>
             <tr>
-                <th>#</th>
                 <th>Event Name</th>
                 <th>Event Time</th>
                 <th>Speakers</th>
@@ -30,34 +29,7 @@
                 <th>Capacity</th>
             </tr>
             </thead>
-            <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td>Event Name 1</td>
-                <td>2021-01-01 5:00am</td>
-                <td>John Smith, Joan Smith</td>
-                <td>An event where people talk to other people.</td>
-                <td>Cafeteria</td>
-                <td>1 / 4 &nbsp; <i class="fa fa-user-friends fa-lg"></i></td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td>Event Name 2</td>
-                <td>2021-01-01 9:00am</td>
-                <td>John Smith, Bob Smith</td>
-                <td>Another event where people talk to other people.</td>
-                <td>Lobby</td>
-                <td>4 / 4 &nbsp; <i class="fa fa-user-friends fa-lg"></i></td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td>Event Name 3</td>
-                <td>2021-01-01 11:00am</td>
-                <td>Joan Smith</td>
-                <td>A third event where people talk to other people.</td>
-                <td>Observatory</td>
-                <td>3 / 4 &nbsp; <i class="fa fa-user-friends fa-lg"></i></td>
-            </tr>
+            <tbody id="events">
             </tbody>
         </table>
         <br>
@@ -68,12 +40,48 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"
         type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 <script src="https://cdn.mkn.cx/MDB/js/mdb.min.js" type="text/javascript"></script>
 <script src="../../assets/js/global.js" type="text/javascript"></script>
 <script src="../../assets/js/account.js" type="text/javascript"></script>
 
 <script>
     print();
+    function getEvents() {
+        $.getJSON("/events", {
+            userId: USER_ID,
+        }, function(result) {
+            console.log(result);
+            let to_print = ``;
+            result.data.forEach(event => {
+                let print_speakers = ``;
+                let print_delete = ``;
+                event.speakerData.forEach(speaker => {
+                    print_speakers = `
+                        ${speaker.name},
+                    `;
+                });
+                print_speakers = print_speakers.substring(0, print_speakers.length - 1);
+                let userCount = event.userIds.length;
+                to_print += `
+                <tr>
+                    <td>${event.name}</td>
+                    <td>` + moment(event.startTime).format('MMMM Do YYYY, h:mm:ss a') + ` - ` + 
+                    moment(event.endTime).format('MMMM Do YYYY, h:mm:ss a') + `</td>
+                    <td>${print_speakers}</td>
+                    <td>${event.description}</td>
+                    <td>${event.roomName}</td>
+                    <td>${userCount}/${event.userLimit} &nbsp;</td>
+                </tr>
+                `;
+            });
+            
+            $("#events").html(to_print);
+            console.log(to_print);
+        });
+    }
+
+    getEvents();
 </script>
 
 </html>
