fixed message bugs

--- a/tuumes/phase2/src/main/resources/static/account/messages/view_messages.html
+++ b/tuumes/phase2/src/main/resources/static/account/messages/view_messages.html
@@ -182,6 +182,7 @@
             userId: USER_ID,
             messageId: messageId
         }, function(result) {
+            console.log(result);
             getMessages();
         });
 
