another thing I lost during my rollback

--- a/tuumes/phase2/src/main/resources/static/account/organizer/modify_event.html
+++ b/tuumes/phase2/src/main/resources/static/account/organizer/modify_event.html
@@ -77,6 +77,14 @@
 <script type="text/javascript" src="../../assets/js/account.js"></script>
 
 <script>
+    let eventId;
+    if (window.location.hash) {
+        let hash = window.location.hash.substring(1);
+        eventId = hash;
+    } else {
+        location.href = "view_events.html";
+    }
+
     function deleteEvent(eventId) {
         $.postJSON("/users/contacts/remove", {
             userId: USER_ID,
