Constructors no longer needed

--- a/tuumes/phase2/src/main/resources/static/account/messages/view_messages.html
+++ b/tuumes/phase2/src/main/resources/static/account/messages/view_messages.html
@@ -117,7 +117,7 @@
                     <div class="container white text-center mt-4 pt-4">
                         ${new_print}
                         <h3>From: ${msg.sender.name}</h3>
-                        <p class="mb-3">${msg.content2}</p>
+                        <p class="mb-3">${msg.content}</p>
                         ${mark_button}
                         <button class="btn btn-warning" onclick="markArchive('${msg.id}')">
                             <i class="fa fa-archive fa-lg"></i> &thinsp; Archive 
