--- a/tuumes/phase2/src/main/resources/static/account/messages/send_message.html
+++ b/tuumes/phase2/src/main/resources/static/account/messages/send_message.html
@@ -53,7 +53,7 @@
             </div>
 
             <div class="form-group">
-                <input class="form-control" id="email" name="email" placeholder="Email (Optional)" required></input>
+                <input class="form-control" id="email" name="email" placeholder="Email" required disabled></input>
             </div>
 
             <div class="form-group">
@@ -82,7 +82,6 @@
         let hash = window.location.hash.substring(1);
         $("#email").val(hash);
         $("#recipient_selector").hide();
-        $("#email").prop('disabled', true);
     }
 
     function switchContact() {
