More bug fixes and README.txt update

--- a/tuumes/phase2/src/main/resources/static/account/messages/view_messages.html
+++ b/tuumes/phase2/src/main/resources/static/account/messages/view_messages.html
@@ -108,8 +108,8 @@
                     let new_print = `<img class="stamp-img" src="../../assets/img/stamp.png">`;
                     if (msg.read) {
                         mark_button = `
-                        <button class="btn btn-info" onclick="markUnread('${msg.id})'">
-                            <i class="fa fa-envelope-close fa-lg"></i> &thinsp; Mark As Unread 
+                        <button class="btn btn-info" onclick="markUnread('${msg.id}')">
+                            <i class="fa fa-envelope fa-lg"></i> &thinsp; Mark As Unread 
                         </button>`;
                         new_print = ``;
                     }
